Fix HTML formatting for student project description

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         </div>
                         <div class="flex flex-col gap-2 px-2 pb-2">
                             <h3 class="text-xl font-bold text-white">Student Attention Tracker</h3>
-                            <p class="text-sm text-[#9dabb9]">""Currently developing a web-based solution for educators to monitor online classroom engagement. The system utilizes facial expression recognition and behavioral analysis to provide real-time insights into student participation.""</p>
+                            <p class="text-sm text-[#9dabb9]">"Currently developing a web-based solution for educators to monitor online classroom engagement. The system utilizes facial expression recognition and behavioral analysis to provide real-time insights into student participation."</p>
                         </div>
                     </div>
             
