--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </h1>
                         <h2 class="text-[#637588] dark:text-[#9dabb9] text-lg md:text-xl font-normal leading-relaxed max-w-2xl">
                             Business Analyst Intern | AI & Intelligent Technology Enthusiast. 
-                            I am Yada Sarakoon, a student of Applied Artificial Intelligence and Smart Technology at Burapha University. My academic journey has equipped me with a unique blend of technical expertise and an analytical mindset. I specialize in transforming complex data into actionable insights to help businesses make informed decisions.
+                            I am Yada Sarakoon, a students from the Faculty of Informatics , majoring in Applied Artificial Intelligence and Smart Technology at Burapha University. My academic journey has equipped me with a unique blend of technical expertise and an analytical mindset. I specialize in transforming complex data into actionable insights to help businesses make informed decisions.
                         </h2>
                     </div>
                     
