Simplify AI and Smart Technology description
Removed the phrase 'Focusing on bridging technical innovation with business strategy' from the description.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     <span class="text-xs font-bold py-1 px-3 rounded-full bg-primary/10 text-primary">2023 - Present</span>
                                 </div>
                                 <p class="text-[#637588] dark:text-[#9dabb9] text-sm leading-relaxed max-w-3xl">
-                                    Applied Artificial Intelligence and Smart Technology, Focusing on bridging technical innovation with business strategy.
+                                    Applied Artificial Intelligence and Smart Technology
                                 </p>
                             </div>
                             <div class="flex flex-col gap-3 p-6 rounded-xl bg-white dark:bg-[#1a2632] border border-[#e5e7eb] dark:border-[#283039] shadow-sm">
